--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>meow</title>
+    <style>
+        html{
+            background-color: #010d18;
+            color: #4e89cc;
+        }
+    </style>
 </head>
 <body>
     <p>silly :3</p>
